--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ UserSettings/
 *.user
 *.pidb
 *.unityproj
+.vs/Bootcamp-43/v17/.suo
+.vs/Bootcamp-43/v17/DocumentLayout.backup.json
+.vs/Bootcamp-43/v17/DocumentLayout.json
