--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Unity Cache Folders
 .vs/
 Temp/
 Library/
@@ -6,7 +5,6 @@ Logs/
 Obj/
 Build/
 
-# User settings
 UserSettings/
 *.csproj
 *.sln
@@ -17,3 +15,6 @@ UserSettings/
 .vs/Bootcamp-43/v17/DocumentLayout.backup.json
 .vs/Bootcamp-43/v17/DocumentLayout.json
 /.vs
+.vs/Bootcamp-43/v17/DocumentLayout.json
+.vs/Bootcamp-43/v17/DocumentLayout.backup.json
+.vs/Bootcamp-43/v17/.suo
